[gd_scene load_steps=9 format=3 uid="uid://my8o76b6te48"]

[ext_resource type="Script" uid="uid://cf1m75qh6coqq" path="res://scenes/animal/Animal.gd" id="1_gm4mo"]
[ext_resource type="Texture2D" uid="uid://r3qi3j4pgbxp" path="res://assets/player/parrot.png" id="1_n06ko"]
[ext_resource type="Texture2D" uid="uid://voy7nc3jlmqr" path="res://assets/items/arrow.png" id="2_gm4mo"]
[ext_resource type="AudioStream" uid="uid://cnqekgd0kcrvg" path="res://assets/audio/stretch2.ogg" id="3_05udb"]
[ext_resource type="AudioStream" uid="uid://svevqrx3lyq" path="res://assets/audio/catapult.ogg" id="4_lbj45"]
[ext_resource type="AudioStream" uid="uid://ib883pkxmho4" path="res://assets/audio/kick_wood.ogg" id="5_426we"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n06ko"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_xq731"]
radius = 19.0263

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_n06ko")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_gm4mo")

[node name="parrot" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_n06ko")

[node name="arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_gm4mo")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xq731")

[node name="debugLabel" type="Label" parent="."]
offset_left = -26.0
offset_top = -133.0
offset_right = 257.0
offset_bottom = 134.0
scale = Vector2(0.192713, 0.148261)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 106
text = "sdfsdf"

[node name="kickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_426we")

[node name="stretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_05udb")

[node name="launchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lbj45")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
